Disabled dropdown menu on mobile devices, since it's not usable and causes issues

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,42 +33,44 @@ body {
 			position: absolute;
 			top: 6svh;
 			background-color: #C0C0C0;
-
-			&.open {
-				animation: growDown 300ms ease-in-out forwards;
-				transform-origin: top center;
-			}
-
-			&.close {
-				animation: shrinkUp 300ms ease-in-out forwards;
-				transform-origin: top center;
-			}
-
-			@keyframes growDown {
-				0% {
-					transform: scaleY(0);
+		
+			@media (hover: hover) {
+				&.open {
+					animation: growDown 300ms ease-in-out forwards;
+					transform-origin: top center;
 				}
-
-				80% {
-					transform: scaleY(1.1);
+			
+				&.close {
+					animation: shrinkUp 300ms ease-in-out forwards;
+					transform-origin: top center;
 				}
-
-				100% {
-					transform: scaleY(1);
+			
+				@keyframes growDown {
+					0% {
+						transform: scaleY(0);
+					}
+				
+					80% {
+						transform: scaleY(1.1);
+					}
+				
+					100% {
+						transform: scaleY(1);
+					}
 				}
-			}
-
-			@keyframes shrinkUp {
-				0% {
-					transform: scaleY(1);
-				}
-
-				20% {
-					transform: scaleY(1.1);
-				}
-
-				100% {
-					transform: scaleY(0);
+			
+				@keyframes shrinkUp {
+					0% {
+						transform: scaleY(1);
+					}
+				
+					20% {
+						transform: scaleY(1.1);
+					}
+				
+					100% {
+						transform: scaleY(0);
+					}
 				}
 			}
 		}
